# TO-naves

./: CMakeLists.txt  MySprite.h  README.md  asteroide.cpp  asteroide.h  avion.cpp  avion.h  clases.dio  disparar.cpp  disparar.h  imagen.qrc  info.cpp  info.ui  info2.cpp  info2.h  info2.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ovni.cpp  ovni.h  ovni2.cpp  ovni2.h  partida.cpp  partida.h  puntuacion.ui  res.qrc  vida.h
